# engineering-telemetry

./: .editorconfig  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml  requirements.txt  rumdl.toml  telemetry.toml  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  docs.yml
data/: catalog.json
data/history/package/: voicepad.jsonl
data/history/release/: voicepad-releases.jsonl
data/history/repository/: voicepad-workflows.jsonl
data/latest/package/: voicepad.json
data/latest/release/: voicepad-releases.json
data/latest/repository/: voicepad-workflows.json
docs/: index.md  storage-model.md  usage.md
docs/dev/: resources.md
schemas/: catalog.schema.json  history-entry.schema.json  latest-snapshot.schema.json
src/engineering_telemetry/: __init__.py  cli.py  config.py  models.py  service.py  storage.py
src/engineering_telemetry/collectors/: __init__.py  base.py  github_actions.py  github_common.py  github_releases.py  pepy.py  registry.py
tests/: test_cli.py  test_collectors.py  test_config.py  test_service.py  test_storage.py
