[project]
name = "engineering-telemetry"
version = "0.1.0"
description = "A JSON-first engineering telemetry aggregator."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "typer>=0.27.0",
    "utilityhub-config>=0.2.7",
]

[project.scripts]
engineering-telemetry = "engineering_telemetry.cli:main"

[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "prek>=0.4.9",
  "pytest>=9.1.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.21",
  "ty>=0.0.59",
  "zensical>=0.0.50",
]

[tool.pytest.ini_options]
minversion = "9.0"

addopts = [
  "-ra",              # Show summary of skipped, xfailed, etc.
  "--strict-markers", # Fail if unknown markers are used (avoids typos)
  "--strict-config",  # Fail on invalid config keys
  "--tb=short",       # Shorter tracebacks (cleaner CI logs)
]

# Test discovery patterns (structure-agnostic)
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Explicitly declared markers (required due to --strict-markers)
markers = [
  "unit: fast, isolated tests with no external dependencies",
  "integration: tests involving external systems (DB, APIs, etc.)",
  "e2e: full system or workflow-level tests",
  "slow: long-running tests (can be excluded in CI if needed)",
]
